# mlx-arm

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FIRST_RUN.md  GITHUB_SETUP.sh  LICENSE  PRE_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING_FOLD5.md  build-android.sh
.github/workflows/: android-ci.yml
android/: CMakeLists.txt  build.gradle.kts
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni_bridge.cpp
android/app/src/main/java/com/mlxarm/demo/: MLXContext.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/jni/: mlx_jni.cpp
android/src/main/java/com/mlxarm/: MLXContext.kt
android/src/main/java/com/mlxarm/demo/: MainActivity.kt
docs/: build.md  mlx_arm.md  mlx_arm_deep-research.md  technical_specification.md
examples/: CMakeLists.txt  README.md  attention_test.cpp  elemwise_multiply_benchmark.cpp  llama_inference.cpp  llama_inference_real.cpp  matmul_benchmark.cpp  quantize.h  rmsnorm_benchmark.cpp  rope_benchmark.cpp  silu_benchmark.cpp  softmax_benchmark.cpp  vector_add.cpp
examples/vector_add/: CMakeLists.txt  vector_add_example.cpp
mlx/: CMakeLists.txt
mlx/backend/: CMakeLists.txt
mlx/backend/cpu/: CMakeLists.txt  cpu_backend.cpp
mlx/backend/vulkan/: CMakeLists.txt  vulkan_backend.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command.cpp  vulkan_command.h  vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h
mlx/backend/vulkan/shaders/: vector_add.comp
mlx/core/: CMakeLists.txt  allocator.cpp  allocator.h  array.cpp  array.h  backend.cpp  backend.h  device.cpp  device.h  graph.cpp  graph.h  ops.cpp  ops.h  safetensors.hpp  tokenizer.hpp  utils.cpp  utils.h
mlx/shaders/: CMakeLists.txt  elemwise_multiply.comp  matmul_fp16.comp  matmul_naive.comp  matmul_q4_0.comp  matmul_subgroup.comp  matmul_tiled.comp  matmul_vectorized.comp  rms_norm.comp  rope.comp  silu.comp  softmax.comp  vector_add.comp
